...
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profilesBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/autoclicker_profiles"
...
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="start|center_vertical"
            android:padding="16dp"
...
            android:paddingBottom="16dp"
            android:text="@string/automation_variations"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/configsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addVariationBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_new_variation" />
    </LinearLayout>
...
