<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:splitMotionEvents="true">

    <LinearLayout
...

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            app:navigationContentDescription="Open drawer"
            app:navigationIcon="@drawable/ic_menu"
            app:navigationIconTint="@android:color/white"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/statusBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
...
                app:iconPadding="0dp"
                app:iconSize="32dp"
                app:iconTint="@null" />
        </LinearLayout>

        <com.elk.phonemouse.TrackpadView
            android:id="@+id/trackpad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="?attr/trackpadBackgroundColor">
...
