...
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsBackBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trackpad_mode">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/trackpadModeDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:saveEnabled="false" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trackpoint_curve">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/trackpointCurveDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:saveEnabled="false" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
...
